OCE-379 Preventing center text from covering the charts

--- a/ui/oce/corruption-risk/contracts/single/donuts/style.less
+++ b/ui/oce/corruption-risk/contracts/single/donuts/style.less
@@ -19,6 +19,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: -1;
   }
 
   &.nr-of-bidders{
